[gd_scene load_steps=4 format=3 uid="uid://6epxudrmdvmc"]

[ext_resource type="Script" path="res://scenes/minigame/dropping_streetfood.gd" id="1_hnpul"]
[ext_resource type="Texture2D" uid="uid://c87hoqqkkiwkv" path="res://assets/streetfoods/cooked/fishball.png" id="2_vkpkh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pf5ui"]
radius = 50.0

[node name="DroppingStreetfood" type="Node2D"]
script = ExtResource("1_hnpul")

[node name="StreetfoodArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StreetfoodArea"]
shape = SubResource("CircleShape2D_pf5ui")

[node name="StreetfoodSprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_vkpkh")

[connection signal="area_entered" from="StreetfoodArea" to="." method="_on_streetfood_area_area_entered"]
